# CUDA

./: .clang-format  .gitignore  01_hello_world  01_hello_world.cu  CMakeLists.txt  README.md  README_ZH.md  install.sh  uninstall.sh  vector_add.cu
00_CUDA_official_documentation/: 01_compute_capability.cu  02_example_vec_add.cu  CMakeLists.txt
01_programming_model/: 01_hello_world.cu  01_hello_world_with_threads.cu  02_error_handle.cu  02_hello_world_with_threads.cu  02_memory_management.cu  03_kernel_timing.cu  03_profiling.cu  04_threads_management.cu  05_example_vec_add.cu  05_memory_management.cu  06_example_sum_matrix_2D-grid_2D-block.cu  07_example_sum_matrix_1D-grid_1D-block.cu  08_example_sum_matrix_1D-grid_1D-block.cu  08_example_sum_matrix_2D-grid_1D-block.cu  09_device_management.cu  10_device_management.cu  CMakeLists.txt
02_execution_model/: 01_warp_divergence.cu  02_simple_device_query.cu  03_parallelism.cu  04_reduction.cu  05_nested_hello_world.cu  06_nested_reduce.cu  CMakeLists.txt
02_programming_interface/: 01_compute_capability.ptx
03_global_memory/: 01_global_variable.cu  02_pageable_memory.cu  03_page_locked_memory.cu  04_mapped_memory.cu  05_unified_virtual_address.cu  06_read_segment.cu  07_write_segment.cu  08_array_of_structure.cu  09_structure_of_array.cu  10_matrix_transpose.cu  11_matrix_sum_managed.cu  12_matrix_sum_manual.cu  CMakeLists.txt
04_shared_and_constant_memory/: 01_square_shared_memory.cu  02_rectangle_shared_memory.cu  03_reduce_with_shared_memory.cu  04_transpose_with_shared_memory.cu  05_constant_stencli.cu  06_shuffle_instruction.cu  07_reduce_with_shuffle.cu  CMakeLists.txt
05_stream_and_concurrence/: 01_hyper-Q.cu  01_hyper-Q_depth.cu  02_hyper-Q_breadth.cu  03_hyper-Q_OpenMP.cu  04_hyper-Q_dependence.cu  05_multi_add_depth.cu  06_stream_callback.cu  CMakeLists.txt
06_adjusting_instruction-level_primitives/: 01_floating_point_accuracy.cu  02_floating_point_perf.cu  03_intrinsic_standard_comp.cu  03_intrinsic_standard_comp.ptx  04_manipulation_instruction_generation.cu  04_manipulation_instruction_generation.ptx  05_atomic_operation.cu  06_atomic_ordering.cu  CMakeLists.txt
07_acceleration_library_and_OpenACC/: 01_cusparse.cu  02_cublas.cu  03_cufft.cu  04_curand.cu  05_openacc_kernels.c  06_openacc_parallel.c  07_openacc_data.c  08_cuda_openacc.cu  CMakeLists.txt  Makefile
mindmap/: 执行模型.xmind
utils/: common.cuh  data.cuh
