add_executable(01_cusparse 01_cusparse.cu)
set_target_properties(01_cusparse PROPERTIES CUDA_ARCHITECTURES ${TARGET_ARCHITECTURES})
set_target_properties(01_cusparse PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(01_cusparse cusparse)
install(TARGETS 01_cusparse DESTINATION 07_acceleration_library_and_OpenACC)

add_executable(02_cublas 02_cublas.cu)
set_target_properties(02_cublas PROPERTIES CUDA_ARCHITECTURES ${TARGET_ARCHITECTURES})
set_target_properties(02_cublas PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(02_cublas cublas)
install(TARGETS 02_cublas DESTINATION 07_acceleration_library_and_OpenACC)

add_executable(03_cufft 03_cufft.cu)
set_target_properties(03_cufft PROPERTIES CUDA_ARCHITECTURES ${TARGET_ARCHITECTURES})
set_target_properties(03_cufft PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(03_cufft cufft)
install(TARGETS 03_cufft DESTINATION 07_acceleration_library_and_OpenACC)